style.css
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}


:root {
    --secondary-bg: #262626;
    --main-bg: #0B1215;
    --main-char-color: #FFFFF2;
    --off-focus-input: #9A9A9A;
    --on-focus-memo: #333333;
    --details : #0047b3;
}

body {
    background: var(--main-bg);
    color: var(--main-char-color);
    width: 100%;
    touch-action: manipulation;
}

.container, #userInputsDiv {
    width: clamp(300px, 95%, 800px);
    margin: 0 auto;
}

#navMenu {
    width: clamp(300px, 95%, 800px);
    height: 10svh;
    padding-inline: 1rem;
    position: fixed;
    background: transparent;
    z-index: 999;
}

#navMenu div:not(:last-of-type){
    width: 100%;
    height: 100%;
    align-items: center;
}

#navOptions {
    justify-content: space-between;
    display: none;
}

#navProfile {
    justify-content: end;
    display: none;
    gap: 1.5rem;
}

#profileBtn {
    position: relative;
}

#profileInfos {
    position: absolute;
    width: 300px;
    text-overflow: ellipsis;
    top: 80%;
    right: 2.5%;
    padding: 1em;
    border-radius: 10px;
    text-align: center;
    font-size: 1.5em;
    border: 1px solid var(--main-char-color);
    background: var(--secondary-bg);
    flex-direction: column;
    align-content: center;
    justify-content: center;
    gap: 0.75em;
    display: none;
}

/*#deleteBtn {
    display: none;
}*/

.identification, .addedElements {
    height: 90svh;
    padding-top: 10svh;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
}

.identification {
    gap: 2.5em;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.identification div {
    width: clamp(280px, 80%, 500px);
    position: relative;
}

.identification div span {
    position: absolute;
    top: 50%;
    right: 5%;
    translate: 0 -50%;
    display: flex;
    align-items: center;
}

input {
    color: var(--main-char-color);
    border-radius: 10px;
    border: 1px solid var(--off-focus-input);
    font-size: 1.25em;
    transition: border 0.25s ease;
}

input:focus {
    border: 1px solid var(--main-char-color);
}

.identification input {
    background: var(--main-bg);
    outline: var(--main-char-color);
    padding-left: 5%;
    padding-right: 15%;
    width: 100%;
    height: 60px;
}

.identification p {
    text-decoration: underline;
}

label {
    position: absolute;
    left: 5%;
    top: -25%;
    background: var(--main-bg);
    padding: 0.25em 0.5em;
}

button {
    height: 60px;
    width: 100%;
    font-weight: 600;
    padding: 0.5em;
    border-radius: 10px;
    font-size: 1.25em;
}

.material-symbols-outlined {
    font-variation-settings:
    'FILL' 1,
    'wght' 400,
    'GRAD' 0,
    'opsz' 24;
    font-size: 35px !important;
}

.registrationForm {
    display: none;
}

#loginForm {
    display: none;
}

#formNotification {
    display: none;
    position: fixed;
    background: var(--secondary-bg);
    color: var(--main-char-color);
    border-radius: 5px;
    bottom: 10%;
    font-size: 1.1rem;
    text-align: center;
    padding: 1rem 2rem;
    width: max-content;
    left: 50%;
    transform: translateX(-50%);
}

#userInputsDiv {
    background: var(--main-bg);
    position: fixed;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 0.5em;
    bottom: 0;
    height: 75px;
    padding: 0 0.25em;
}

#userInput {
    width: 85%;
    height: 50px;
    background: var(--secondary-bg);
    outline: 0;
    padding: 0 2.5%;
}

#userInput:focus {
    border-color: var(--details);
}

#userInput:not(:placeholder-shown) ~ #btnSend {
    display: block;
}

#userInput:placeholder-shown ~ #btnSend {
    display: none;
}

#userInput:not(:placeholder-shown) ~ #btnMic {
    display: none; 
}


#userInputsDiv span {
    background: var(--details);
    padding: 15px;
    border-radius: 50%;
    display: flex;
    align-items: center;
}

.addedElements {
    display: none;
    gap: 20px;
    align-items: flex-start;
    align-content: flex-start;
}

.addedElements p {
    background: var(--secondary-bg);
    padding: 1em;
    border-radius: 10px;
    height: max-content;
    outline: 0;
    position: relative;
}

[data-selected = "true"] {
    background: var(--on-focus-memo) !important;
}

.checkSelect {
    position: absolute;
    top: -12.5%;
    right: -5%;
    transform: scale(1.35);
    accent-color: var(--details);
    display: none;
}

dialog {
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    border-radius: 10px;
    background: var(--secondary-bg);
    border: none;
    color: var(--main-char-color);
}


#helpBox {
    position: fixed;
    width: calc(80 / 100 * clamp(300px, 95%, 800px));
    height: 80vh;
    outline: 0;
    border: 1px solid var(--main-char-color);
    padding: 1rem;
    overflow-y: hidden;
}

#helpBox::backdrop {
    background: rgba(0,0,0,0.5);
  }

#helpBox button {
    outline: 0;
    width: max-content;
    padding: 1rem 3rem;
    left: 50%;
    transform: translateX(-50%);
    position: absolute;
    bottom: 1rem;
}

#helpBox ul {
    max-height: 85%;
    list-style-type: none;
    overflow-y: scroll;
}

#helpBox li {
    margin: 2rem 0.5rem 2rem 1rem;
    background: url(media/icons/infoIcon.svg) left top no-repeat;
    padding-left: 2rem;
}

#helpBox h3 {
    position: relative;
    margin-bottom: 0.5rem;
    text-decoration: underline;
    text-decoration-thickness: 0.2rem;
    text-underline-offset: 0.15rem;
}

#helpBox span {
    display: flex;
    align-items: center;
    height: max-content;
}

#confirmDeletion {
    width: min(80%, 500px);
    position: absolute;
    flex-direction: column;
    justify-content: space-between;
    height: 15%;
    padding: 1.25em 1.25em;
}

#confirmDeletion p:first-of-type {
    font-size: 1.35em;
    text-align: center;
}

#confirmDeletion p:last-of-type {
    display: flex;
    justify-content: space-around;
}



#loadingCircleDiv {
    display: none;
}

svg {
    width: 3.25em;
    transform-origin: center;
    animation: rotate4 2s linear infinite;
}
   
circle {
    fill: none;
    stroke: hsl(214, 97%, 59%);
    stroke-width: 2;
    stroke-dasharray: 1, 200;
    stroke-dashoffset: 0;
    stroke-linecap: round;
    animation: dash4 1.5s ease-in-out infinite;
}
   
@keyframes rotate4 {
    100% {
     transform: rotate(360deg);
    }
}
   
@keyframes dash4 {
    0% {
     stroke-dasharray: 1, 200;
     stroke-dashoffset: 0;
    }
   
    50% {
     stroke-dasharray: 90, 200;
     stroke-dashoffset: -35px;
    }
   
    100% {
     stroke-dashoffset: -125px;
    }
}


.material-icons { 
    transform: scale(1.5);
}

